# cpp_template

./: CMakeLists.txt  README.md
include/: hello.hpp
src/: CMakeLists.txt  hello.cpp  main.cpp
test/: CMakeLists.txt  factorial_test.cpp
